# kube-ctf

./: README.md  compose.yaml  deploy.yaml  example.yaml
backend-rs/: .env  Cargo.toml  README.md  demo.json
backend-rs/.sqlx/: query-1d14964a0b1472228a1038d6683c7974719682798ae01f2e842295d0ad6e5050.json  query-47f4dfeda393b28b00d8ff97eb77079527a99e35c2c3b492094187ae78c0daae.json  query-5dfb72cbfce2ea2640348bb17ac1d9900ef0cfa57bc489c2b01e15912cc30570.json  query-65fc40f8f2ce1ccdf485fcbf48dc1a5a2710e90b077ca506fc527a7049a51a09.json  query-6e583b654f946ad7a8f72372db4c2e6cd8e3d015b68efc09521e8d85f0272d8b.json  query-74120c3096c09b62a039e29bcfdc92468f0043a3dcefe82b51250b059ae073a9.json  query-75701cf3e2ce17d5866a6e04fa66ab9dfc845827d1c761d6976bd2d946f8eb4a.json  query-7cab3b8e8f093921dd2b2e5b4146c6ab60421ff50956520a2ddb54299e9b5e0b.json  query-82cdf91746f9793e8ce5ed7a98e07f376fc686d035eaad5a1d453446b319344e.json  query-9c330afdfdb84ce90c30adeea2c2ae3126fbd300d510b15ae55e9b3e9357636e.json  query-9d24ff34ea655dc6507bb3a387a69b0292d1949db09b1ab10b7da6f6141c7599.json  query-addea2a3a3350c3804889fc297594d2855229d73bfdb14a3e3b329ddc0ccf895.json  query-af60079fbd9ad45d19b1cdc4d22870c46de75d00ddd5e3ae82637fb599a3577f.json  query-de9e4389aff1fee04cde2db71af87dfb70ac1198f178880cb0174fe0068513ea.json  query-e7714c306bdf594ca4a95183c69c74c514ba0ae4ec61ef7995c6fce30ea2f162.json  query-ed57e57eba7de89375c53bdd868dc182ddf006bf3a8b5a757c2482605df5b677.json
backend-rs/migrations/: 20250401130122_init.down.sql  20250401130122_init.up.sql  20250401201235_running_challenges.down.sql  (+3 more)
(+237 files in other folders)
