[package]
name = "kube-ctf"
version = "0.1.0"
edition = "2024"

[features]
swagger = []

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = "0.8.3"
chrono = "0.4.40"
dotenvy = "0.15.7"
fastrand = "2.3.0"
jsonwebtoken = "9.3.1"
k8s-openapi = { version = "0.24.0", features = ["latest", "schemars"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
redis = { version = "0.29.2", features = ["tokio-comp", "ahash"] }
regex = "1.11.1"
rust-argon2 = "2.1.0"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "runtime-tokio", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "macros", "non_strict_integers", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { git = "https://github.com/spotgamma/utoipa", rev="205f66f782ed8c84c490833c0bb4994181a85d84", features = ["axum"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
